# kattis

./: README.md  pyproject.toml
.github/workflows/: poetry-test.yml
kattis/: bocchinorokku.py  candy.py  ding_dong_ditch.py  encryption.py  nafnatalning.py  smoothie_stand.py  talnalas.py  the_plank.py
tests/: test_bocchinorokku.py  test_candy.py  test_ding_dong_ditch.py  test_encryption.py  test_nafnatalning.py  test_smoothie_stand.py  test_talnalas.py  test_the_plank.py
