[tool.poetry]
name = "kattis"
version = "0.1.0"
description = ""
authors = ["Enzo Claeyssen <enzo.claeyssen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.2"
coverage = "^7.10.7"
pylint = "^3.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
